Revert "Fix logo not showing up"
This reverts commit 5fd5cb1c94505a4426c3c1dde86b30f88cb826de.

--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@
 	
 	
 	body {
-		background: #00ff00;
+		
 	}
 	
 	
